# primer-panel

./: .gitignore  CHANGELOG.md  LICENSE  README.md  audit_target_planning.md  panel_finalization.py  pyproject.toml  test_smoke.sh
.github/workflows/: publish.yml
primer_panel/: __init__.py  __main__.py  cds_handler.py  config.py  ensembl_client.py  exon_handler.py  gtf_annotation.py  insilico_pcr.py  insilico_pcr_cli.py  main.py  panel_finalization.py  preflight.py  primer3_runner.py  primer3plus_core_adapter.py  stage3_inputs.py  target_grouper.py  target_grouper_v2.py  target_planner_adapter.py  utils.py  variant_annotation.py  writers.py
primer_panel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli_stage.py  test_gtf_annotation.py  test_insilico_pcr.py  test_packaging_metadata.py  test_preflight.py  test_target_grouper_v2.py  test_template_extension.py  test_variant_annotation.py
