[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "primer-panel"
version = "0.4.0"
description = "PCR primer panel pipeline: CDS target generation, Primer3Plus-like primer design, in-silico specificity check"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "d-jch", email = "djch@vip.163.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "requests",
    "primer3plus_core",
    "primer-target-planner",
]

[project.optional-dependencies]
excel = ["openpyxl"]
fasta = ["pyfaidx"]
test = ["pytest"]

[project.scripts]
primer-panel = "primer_panel.main:main"
primer-panel-finalize = "primer_panel.panel_finalization:main"

[tool.setuptools.packages.find]
include = ["primer_panel*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: tests that require external resources (deselect with '-m \"not integration\"')",
]
